--- a/image-tagging-tool/templates/index.html
+++ b/image-tagging-tool/templates/index.html
@@ -12,7 +12,7 @@
 
 <div id="cover">
     {% for image in images %}
-    <img width="100" height="120" src="{{ url_for('static', filename=image.url) }}"> {% endfor %}
+    <img width="100" height="120" src="{{ url_for('get_images', filename=image.url) }}"> {% endfor %}
 
     <div> <br>
         <br> {% for label in labels %}
