--- a/image-tagging-tool/templates/index.html
+++ b/image-tagging-tool/templates/index.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %} {% block head %}
-
+{% extends 'base.html' %} {% block head %} {% block sidebar %}
 <ul>
     <li style="display: block; padding: 20px 30px;">
         <h1>tasks</h1>
@@ -7,7 +6,11 @@
     {% for label in labels %}
     <li><a class="{{'active' if 'label-' + label.name ==  active_label}}" href="#{{label.name}}">label-{{label.name}}</a></li>
     {% endfor %}
+    <li><a class="{{'active' if 'aesthetic-scores' ==  active_label}}" href="#aesthetic-score">Aesthetic Score</a></li>
+
 </ul>
+{% endblock %}
+
 
 
 <div style="text-align: center;">
@@ -19,7 +22,7 @@
 </div>
 <!-- <hr> -->
 
-<div id="cover">
+<div class="{{'hidden' if 'aesthetic-scores' ==  active_label}}" id="cover">
     {% for image in images %}
     <img width="100" height="120" src="{{ url_for('get_images', filename=image.url) }}"> {% endfor %}
 
@@ -36,8 +39,58 @@
     </div>
 </div>
 
+<div style="margin: 2% 32% auto; text-align: center;" id="aesthetic-score" class="{{'hidden' if 'aesthetic-scores' !=  active_label}}">
+
+    <img class="aesthetic-image" class="selected" src="{{ url_for('get_images', filename=aesthetic_score_image.url) }}">
+
+    <div class='score-group'>
+        <button class="score-button">-2</button>
+        <button class="score-button">-1</button>
+        <button class="score-button">0</button>
+        <button class="score-button">1</button>
+        <button class="score-button">2</button>
+    </div>
+
+    <input class="score-image-tag" style="margin: 5% 30%;" type="search" list="tag-name" placeholder="Choose a tag name">
+
+    <datalist id="tag-name">
+        {% for predicted in predicted_tags %}
+        <option value="{{predicted}}" />{% endfor %}
+    </datalist>
+
+    <button type="button" class="btn btn-success submit-aesthetic-score">Submit</button>
+
+</div>
 
 <style>
+    .score-group {
+        text-align: center;
+        margin-top: 50px;
+        /* margin: 5% 30%; */
+    }
+    
+    .score-button {
+        background-color: rgb(243, 243, 243);
+        border: 5px;
+        color: #000000;
+        padding: 15px 32px;
+        text-align: center;
+        margin: 4px 2px;
+        cursor: pointer;
+        -webkit-transition-duration: 0.6s;
+        transition-duration: 0.6s;
+        cursor: pointer;
+        /*margin: auto;*/
+    }
+    
+    .score-button-active {
+        background-color: #5c9cf5;
+    }
+    
+    .hidden {
+        display: none;
+    }
+    
     body {
         background-color: white;
         /* margin: 0; */
@@ -64,7 +117,8 @@
         margin: 10px;
     } */
     
-    .selected {
+    .selected,
+    .aesthetic-image {
         box-shadow: 0px 12px 22px 1px rgb(98, 182, 250);
         border: 3px solid blue !important;
     }
@@ -104,6 +158,22 @@
     $('a').click(function() {
         $('.active').removeClass('active'); // removes the previous selected class
         $(this).addClass('active'); // adds the class to the clicked tag
+
+        if ($(this).text() == "Aesthetic Score") {
+            $("#cover").addClass("hidden");
+            $("#aesthetic-score").removeClass("hidden");
+
+        } else {
+            $("#cover").removeClass("hidden");
+            $("#aesthetic-score").addClass("hidden");
+        }
+    });
+
+    // choose a certain score 
+    $('.score-button').click(function() {
+        $('.score-button-active').removeClass('score-button-active'); // removes the previous selected class
+        $(this).addClass('score-button-active'); // adds the class to the clicked tag
+
     });
 
     $('img').click(function() {
@@ -145,6 +215,7 @@
             type: 'POST',
             contentType: 'application/json; charset=ISO-8859-15',
             data: JSON.stringify({
+                'task': 'label-images',
                 'images': images,
                 'label': label,
                 'username': username,
@@ -157,6 +228,54 @@
             },
 
         });
+
+    });
+
+    $('.submit-aesthetic-score').click(function() {
+        // get the chosen labels. 
+        var score = $("button").filter(".score-button-active").text();
+
+        if (score === undefined || score == "") {
+            alert("Please choose a score");
+            return;
+        }
+
+        var img_tag = $('.score-image-tag').val();
+
+        if (img_tag.length == 0) {
+            alert("Please select a tag");
+            return;
+        }
+
+        var username = $("input[id='username']").val();
+
+        if (username.length == 0) {
+            alert("Username field can not be empty");
+            return;
+        }
+
+        // send the POST request 
+        $.ajax({
+            url: 'http://localhost:5000/taggingTool/api/labelImages',
+            type: 'POST',
+            contentType: 'application/json; charset=ISO-8859-15',
+            data: JSON.stringify({
+                'task': 'aesthetic-score',
+                'label': 'aesthetic-scores',
+                'images': [$('.aesthetic-image').attr('src')],
+                'score': score,
+                'img_tag': img_tag,
+                'username': username,
+            }),
+            success: function(response) {
+                $("body").html(response);
+            },
+            error: function(error) {
+                alert("Something went wrong please try again");
+            },
+
+        });
+
 
     });
 </script>
