--- a/image-tagging-tool/templates/index.html
+++ b/image-tagging-tool/templates/index.html
@@ -155,6 +155,8 @@
     .aesthetic-image {
         box-shadow: 0px 12px 22px 1px rgb(98, 182, 250);
         border: 3px solid blue !important;
+        width: 350px;
+        height: 236px;
     }
     /*Side bar styles */
     
